# llvm2scratch

./: .gitignore  LICENSE  README.md  compilation.md  main.c  planning.md  pyproject.toml  sb3.py  sb3cc.py  sb3opt.py
examples/: compile-overflow.py  compile.py  export.py  optimize.py  profiler.py
examples/input/: complex_gep.ll  demo.c  fn_ptr.c  ievalue.ll  main.c  overflow.ll  phi_node_order.ll  pi.c  sb3api.h  vararg.c  vararg.ll
input/: main.c
llvm2scratch/: __init__.py  cli.py  compiler.py  graph_util.py  ir.py  optimizer.py  parser.py  parser_util.py  scratch.py  target.py  util.py
llvm2scratch/data/targets/: scratch3.toml  turbowarp3.toml
llvm2scratch/tests/: test_compiler.py  test_parser.py
