[tool.poetry]
name = "llvm2scratch"
version = "0.1.0"
description = "An LLVM backend to convert LLVM IR to MIT Scratch."
authors = ["Classfied3D"]
license = "MIT"
readme = "README.md"
packages = [{ include = "llvm2scratch" }]

[tool.poetry.dependencies]
python = ">=3.12"
llvmlite = "^0.45.0"

[tool.poetry.scripts]
llvm2scratch = "llvm2scratch.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
